--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-## Ignore the following files:
+.vscode/
+*pycache*
 
-# Tmp files
-*~
-
-# Pycache files
-*__pycache__*
-
-# Temporarily created file from running console
-file.json
+storage.json
